Avoid rending non-visible items

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,7 @@
 .wp-block-woocommerce-product-best-sellers,
 .wp-block-woocommerce-product-category,
 .wp-block-woocommerce-product-top-rated,
-.wp-block-woocommerce-products-by-attribute,
-.wc-block-grid {
+.wp-block-woocommerce-products-by-attribute {
 	&.is-hidden-title {
 		.wc-block-grid__product-title,
 		.woocommerce-loop-product__title {
